opam-version: "1.2"
name: "panograph"
author: "Petter A. Urkedal <paurkedal@gmail.com>"
maintainer: "Petter A. Urkedal <paurkedal@gmail.com>"
homepage: "https://github.com/paurkedal/panograph/"
bug-reports: "https://github.com/paurkedal/panograph/issues"
dev-repo: "https://github.com/paurkedal/panograph.git"
license: "LGPL-3 with OCaml linking exception"
build: ["ocaml" "pkg/pkg.ml" "build" "--pinned" "%{pinned}%"]
depends: [
  "adpkg" {build}
  "eliom" {>= "6.3" & < "7.0"}
  "js_of_ocaml"
  "js_of_ocaml-ppx"
  "lwt"
  "ocamlbuild" {build}
  "ocamlfind" {build}
  "ppx_compose"
  "ppx_deriving"
  "prime"
  "react"
  "topkg" {build}
]
