opam-version: "2.0"
name: "panograph"
maintainer: "Petter A. Urkedal <paurkedal@gmail.com>"
authors: "Petter A. Urkedal <paurkedal@gmail.com>"
license: "LGPL-3 with OCaml linking exception"
homepage: "https://github.com/paurkedal/panograph/"
bug-reports: "https://github.com/paurkedal/panograph/issues"
depends: [
  "ocaml"
  "adpkg" {build}
  "eliom" {>= "6.3" & < "7.0"}
  "iso639"
  "js_of_ocaml"
  "js_of_ocaml-ppx"
  "lwt"
  "ocamlbuild" {build}
  "ocamlfind" {build}
  "ppx_compose"
  "ppx_deriving"
  "prime"
  "react"
  "topkg" {build}
]
build: ["ocaml" "pkg/pkg.ml" "build" "--pinned" "%{pinned}%"]
dev-repo: "git+https://github.com/paurkedal/panograph.git"
